--- a/README
+++ b/README
@@ -36,7 +36,7 @@ Fizz
 Buzz
 ... etc up to 100
 
-Stage 2 - new requirements
+Stage 2 - new requirements!
 
  * A number is fizz if it is divisible by 3 or if it has a 3 in it
  * A number is buzz if it is divisible by 5 or if it has a 5 in it
